--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 # Xcode
-#
 .DS_Store
 build/
 *.pbxuser
@@ -18,6 +17,9 @@ DerivedData
 *.ipa
 *.xcuserstate
 
+# Python
+*.pyc
+*.py~
 # CocoaPods
 #
 # We recommend against adding the Pods directory to your .gitignore. However
